devices: lord sync

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2024-03-31T11:14:16+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2024-04-06T11:17:15+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,8 +46,8 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2024-03-31T10:56:05+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2024-03-31T10:56:05+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2024-04-06T11:10:02+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2024-04-06T11:10:02+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
@@ -518,19 +518,25 @@
           <ReservedAddresses>192.168.1.14</ReservedAddresses>
           <HostLabel>lord-ipmi-dedicated</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="29">
-          <Enable>TRUE</Enable>
-          <Chaddr>98:25:4a:73:46:e1</Chaddr>
-          <ReservedAddresses>192.168.1.15</ReservedAddresses>
-          <HostLabel>lord</HostLabel>
-        </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="30">
+        <DHCPConditionalServingPool instance="32">
           <Enable>TRUE</Enable>
           <Chaddr>d0:50:99:f7:52:b1</Chaddr>
-          <ReservedAddresses>192.168.1.17</ReservedAddresses>
+          <ReservedAddresses>192.168.1.15</ReservedAddresses>
           <HostLabel>lord-ipmi-shared</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool nextInstance="31"></DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="38">
+          <Enable>TRUE</Enable>
+          <Chaddr>d0:50:99:fd:76:fd</Chaddr>
+          <ReservedAddresses>192.168.1.16</ReservedAddresses>
+          <HostLabel>lord-bottom</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="39">
+          <Enable>TRUE</Enable>
+          <Chaddr>d0:50:99:fd:76:fe</Chaddr>
+          <ReservedAddresses>192.168.1.17</ReservedAddresses>
+          <HostLabel>lord-top</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool nextInstance="40"></DHCPConditionalServingPool>
       </LANHostConfigManagement>
       <X_BROADCOM_COM_IPv6LANHostConfigManagement>
         <DHCPv6ServerEnable>FALSE</DHCPv6ServerEnable>
@@ -598,12 +604,12 @@
         <X_BROADCOM_COM_Guest2Enable>FALSE</X_BROADCOM_COM_Guest2Enable>
         <X_BROADCOM_COM_Guest2Hiden>FALSE</X_BROADCOM_COM_Guest2Hiden>
         <X_BROADCOM_COM_Guest2IsolateClients>FALSE</X_BROADCOM_COM_Guest2IsolateClients>
-        <AssociatedDevice instance="29339">
+        <AssociatedDevice instance="29841">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>royalty2</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="29340"></AssociatedDevice>
+        <AssociatedDevice nextInstance="29842"></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -908,7 +914,7 @@
       </X_VENDOR_WlanConfiguration>
       <X_VENDOR_WlanConfiguration nextInstance="2"></X_VENDOR_WlanConfiguration>
       <Hosts>
-        <Host nextInstance="76"></Host>
+        <Host nextInstance="82"></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2"></LANDevice>
@@ -1183,7 +1189,7 @@
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="24">
       <Hostname>lord</Hostname>
-      <IpAddress>192.168.1.15</IpAddress>
+      <IpAddress>192.168.1.16</IpAddress>
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="25">
       <Hostname>lord-ipmi-dedicated</Hostname>
@@ -1191,9 +1197,9 @@
     </X_VENDOR_StaticDNSHost>
     <X_VENDOR_StaticDNSHost instance="26">
       <Hostname>lord-ipmi-shared</Hostname>
-      <IpAddress>192.168.1.17</IpAddress>
+      <IpAddress>192.168.1.15</IpAddress>
     </X_VENDOR_StaticDNSHost>
-    <X_VENDOR_StaticDNSHost nextInstance="27"></X_VENDOR_StaticDNSHost>
+    <X_VENDOR_StaticDNSHost nextInstance="28"></X_VENDOR_StaticDNSHost>
   </InternetGatewayDevice>
 </DslCpeConfig>
  
