net: update emperor mac

--- a/misc/BiPAC_8900AX2400.conf
+++ b/misc/BiPAC_8900AX2400.conf
@@ -36,7 +36,7 @@
       <IfName>(null)</IfName>
     </X_BROADCOM_COM_EthernetSwitch>
     <ManagementServer>
-      <PeriodicInformTime>2024-04-06T11:17:15+00:00</PeriodicInformTime>
+      <PeriodicInformTime>2024-04-15T10:24:56+00:00</PeriodicInformTime>
     </ManagementServer>
     <Time>
       <Enable>TRUE</Enable>
@@ -46,8 +46,8 @@
       <NTPServer4>3.au.pool.ntp.org</NTPServer4>
       <LocalTimeZone>&#32;10:00</LocalTimeZone>
       <LocalTimeZoneName>Canberra,&#32;Melbourne,&#32;Sydney</LocalTimeZoneName>
-      <DaylightSavingsStart>2024-04-06T11:10:02+00:00</DaylightSavingsStart>
-      <DaylightSavingsEnd>2024-04-06T11:10:02+00:00</DaylightSavingsEnd>
+      <DaylightSavingsStart>2024-04-15T10:24:56+00:00</DaylightSavingsStart>
+      <DaylightSavingsEnd>2024-04-15T10:24:56+00:00</DaylightSavingsEnd>
     </Time>
     <Layer2Bridging>
       <BridgeNumberOfEntries>1</BridgeNumberOfEntries>
@@ -458,12 +458,6 @@
           <ReservedAddresses>192.168.1.21</ReservedAddresses>
           <HostLabel>dock</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool instance="5">
-          <Enable>TRUE</Enable>
-          <Chaddr>10:7B:44:93:A5:6D</Chaddr>
-          <ReservedAddresses>192.168.1.31</ReservedAddresses>
-          <HostLabel>emperor</HostLabel>
-        </DHCPConditionalServingPool>
         <DHCPConditionalServingPool instance="6">
           <Enable>TRUE</Enable>
           <Chaddr>3c:58:c2:f0:d4:f8</Chaddr>
@@ -536,7 +530,13 @@
           <ReservedAddresses>192.168.1.17</ReservedAddresses>
           <HostLabel>lord-top</HostLabel>
         </DHCPConditionalServingPool>
-        <DHCPConditionalServingPool nextInstance="40"></DHCPConditionalServingPool>
+        <DHCPConditionalServingPool instance="40">
+          <Enable>TRUE</Enable>
+          <Chaddr>08:bf:b8:76:4b:c0</Chaddr>
+          <ReservedAddresses>192.168.1.31</ReservedAddresses>
+          <HostLabel>emperor</HostLabel>
+        </DHCPConditionalServingPool>
+        <DHCPConditionalServingPool nextInstance="41"></DHCPConditionalServingPool>
       </LANHostConfigManagement>
       <X_BROADCOM_COM_IPv6LANHostConfigManagement>
         <DHCPv6ServerEnable>FALSE</DHCPv6ServerEnable>
@@ -604,12 +604,17 @@
         <X_BROADCOM_COM_Guest2Enable>FALSE</X_BROADCOM_COM_Guest2Enable>
         <X_BROADCOM_COM_Guest2Hiden>FALSE</X_BROADCOM_COM_Guest2Hiden>
         <X_BROADCOM_COM_Guest2IsolateClients>FALSE</X_BROADCOM_COM_Guest2IsolateClients>
-        <AssociatedDevice instance="29841">
+        <AssociatedDevice instance="29858">
           <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
           <X_BROADCOM_COM_Ssid>royalty2</X_BROADCOM_COM_Ssid>
           <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
         </AssociatedDevice>
-        <AssociatedDevice nextInstance="29842"></AssociatedDevice>
+        <AssociatedDevice instance="29859">
+          <X_BROADCOM_COM_Authorized>1</X_BROADCOM_COM_Authorized>
+          <X_BROADCOM_COM_Ssid>royalty2</X_BROADCOM_COM_Ssid>
+          <X_BROADCOM_COM_Ifcname>wl0</X_BROADCOM_COM_Ifcname>
+        </AssociatedDevice>
+        <AssociatedDevice nextInstance="29860"></AssociatedDevice>
         <WEPKey instance="1">
           <WEPKey>1234567890123</WEPKey>
         </WEPKey>
@@ -660,57 +665,57 @@
             <WlMFP>0</WlMFP>
             <WlAPIsolation>1</WlAPIsolation>
             <WlFltMacMode>allow</WlFltMacMode>
-            <WlMacFltCfg instance="365">
+            <WlMacFltCfg instance="375">
               <WlMacAddr>F2:45:4D:38:FE:59</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="366">
+            <WlMacFltCfg instance="376">
               <WlMacAddr>B8:27:EB:E2:D1:10</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="367">
+            <WlMacFltCfg instance="377">
               <WlMacAddr>64:A2:F9:12:F0:EA</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="368">
+            <WlMacFltCfg instance="378">
               <WlMacAddr>3C:58:C2:F0:D4:F8</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="369">
+            <WlMacFltCfg instance="379">
               <WlMacAddr>58:A0:23:CF:E6:8A</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="370">
+            <WlMacFltCfg instance="380">
               <WlMacAddr>50:5A:65:60:76:61</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="371">
+            <WlMacFltCfg instance="381">
               <WlMacAddr>58:B0:D4:69:29:56</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="372">
+            <WlMacFltCfg instance="382">
               <WlMacAddr>F4:6D:3F:CE:A4:AF</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="373">
+            <WlMacFltCfg instance="383">
               <WlMacAddr>D4:3A:2C:4D:EE:7A</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg instance="374">
+            <WlMacFltCfg instance="384">
               <WlMacAddr>58:B0:D4:6A:7A:5B</WlMacAddr>
               <WlSsid>royalty2</WlSsid>
               <WlIfcname>wl0</WlIfcname>
             </WlMacFltCfg>
-            <WlMacFltCfg nextInstance="375"></WlMacFltCfg>
+            <WlMacFltCfg nextInstance="385"></WlMacFltCfg>
             <WlKey64Cfg instance="1">
             </WlKey64Cfg>
             <WlKey64Cfg instance="2">
@@ -914,7 +919,7 @@
       </X_VENDOR_WlanConfiguration>
       <X_VENDOR_WlanConfiguration nextInstance="2"></X_VENDOR_WlanConfiguration>
       <Hosts>
-        <Host nextInstance="82"></Host>
+        <Host nextInstance="94"></Host>
       </Hosts>
     </LANDevice>
     <LANDevice nextInstance="2"></LANDevice>
@@ -998,7 +1003,7 @@
       <WANDSLInterfaceConfig>
         <Enable>TRUE</Enable>
         <dslptm>TRUE</dslptm>
-        <dsltime>144</dsltime>
+        <dsltime>147</dsltime>
         <dslup>TRUE</dslup>
         <LinkEncapsulationUsed>G.993.2_Annex_K_PTM</LinkEncapsulationUsed>
         <X_VENDOR_TpsTc>14</X_VENDOR_TpsTc>
@@ -1063,7 +1068,7 @@
           <X_BROADCOM_COM_FirewallEnabled>TRUE</X_BROADCOM_COM_FirewallEnabled>
           <DNSServers>8.8.8.8,8.8.4.4</DNSServers>
           <X_VENDOR_MaxMTUSize>1500</X_VENDOR_MaxMTUSize>
-          <MACAddress>60:03:47:55:67:3e</MACAddress>
+          <MACAddress>60:03:47:55:67:40</MACAddress>
           <X_BROADCOM_COM_IfName>eth5.1</X_BROADCOM_COM_IfName>
           <X_BROADCOM_COM_ConnectionId>1</X_BROADCOM_COM_ConnectionId>
           <PortMappingNumberOfEntries>0</PortMappingNumberOfEntries>
