--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -27,4 +27,7 @@ MODE:
 VRR_OFF:
   - LG Display 0x05EF
   - Samsung Display Corp. 0x4165
+CHANGE_SUCCESS_CMD: |
+  bell
+  notify-send way-displays "CHANGE_SUCCESS_CMD"
 
