mangohud: minimal top left

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -61,29 +61,56 @@ output_folder=/tmp
 #
 # horizontal
 #
-horizontal=1
+# horizontal=1
 
-cpu_stats=1
-cpu_temp=0
-cpu_power=0
+# cpu_stats=1
+# cpu_temp=0
+# cpu_power=0
 
+# gpu_stats=1
+# gpu_temp=0
+# gpu_power=0
+
+# fps=1
+# frametime=0
+
+# frame_timing=1
+
+# hud_compact=1
+# hud_no_margin=1
+
+# alpha=0.5
+# background_alpha=0
+
+# vram_color=777777
+
+# table_columns=20
+
+#
+# top left minimal
+#
+#
+position=top-left
+
+cpu_stats=0
 gpu_stats=1
-gpu_temp=0
-gpu_power=0
-
 fps=1
 frametime=0
-
-frame_timing=1
+frame_timing=0
 
 hud_compact=1
 hud_no_margin=1
 
-alpha=0.5
+font_size=30
+
+alpha=0.8
 background_alpha=0
 
-vram_color=777777
+table_columns=2
 
-table_columns=20
+width=140
+offset_x=-70
+
+text_color=009900
 
 # vim: set filetype=sh :
