--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -104,13 +104,15 @@ hud_no_margin=1
 font_size=30
 
 alpha=0.8
-background_alpha=0
+background_alpha=0.2
 
 table_columns=2
 
-width=140
-offset_x=-70
+width=120
+offset_x=-60
+cellpadding_y=+0.05
 
-text_color=009900
+text_color=00CC00
+text_outline_thickness=1
 
 # vim: set filetype=sh :
