karabiner: basic macos mapping rules

--- a/config/karabiner/karabiner.yaml
+++ b/config/karabiner/karabiner.yaml
@@ -13,67 +13,75 @@ profiles:
         basic.to_if_held_down_threshold_milliseconds: 0
         mouse_motion_to_scroll.speed: 100
       rules:
-        - description: DFK
+        - description: close all
           manipulators:
             - from:
                 key_code: delete_or_backspace
                 modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: delete_or_backspace
-              to_if_held_down:
-                - key_code: left_shift
+                  mandatory:
+                    - command
+                    - control
+                    - option
+                    - shift
+              to:
+                - key_code: comma
+                  modifiers:
+                    - command
+                    - shift
               type: basic
-            - from:
-                key_code: spacebar
-                modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: spacebar
-              to_if_held_down:
-                - key_code: right_shift
-              type: basic
-            - from:
-                key_code: tab
-                modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: tab
-              to_if_held_down:
-                - key_code: right_control
-              type: basic
+        - description: lock
+          manipulators:
             - from:
                 key_code: delete_forward
                 modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: delete_forward
-              to_if_held_down:
-                - key_code: right_control
+                  mandatory:
+                    - command
+                    - control
+                    - option
+                    - shift
+              to:
+                - key_code: x
+                  modifiers:
+                    - command
+                    - control
               type: basic
+        - description: close
+          manipulators:
             - from:
-                key_code: escape
+                key_code: delete_or_backspace
                 modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: escape
-              to_if_held_down:
-                - key_code: left_command
+                  mandatory:
+                    - command
+                    - control
+                    - option
+              to:
+                - key_code: comma
+                  modifiers:
+                    - command
               type: basic
+        - description: browser
+          manipulators:
             - from:
-                key_code: return_or_enter
+                key_code: v
                 modifiers:
-                  optional:
-                    - any
-              to_if_alone:
-                - key_code: return_or_enter
-              to_if_held_down:
-                - key_code: right_command
+                  mandatory:
+                    - command
+                    - control
+                    - option
+              to:
+                - shell_command: '"/Applications/Brave Browser.app/Contents/MacOS/Brave Browser" --new-window > /dev/null 2>&1 &'
+              type: basic
+        - description: term
+          manipulators:
+            - from:
+                key_code: c
+                modifiers:
+                  mandatory:
+                    - command
+                    - control
+                    - option
+              to:
+                - shell_command: /opt/homebrew/bin/alacritty msg create-window > /dev/null 2>&1 || /opt/homebrew/bin/alacritty > /dev/null 2>&1 &
               type: basic
     devices:
       - disable_built_in_keyboard_if_exists: false
@@ -150,6 +158,101 @@ profiles:
           is_pointing_device: true
           product_id: 99
           vendor_id: 7247
+        ignore: true
+        manipulate_caps_lock_led: false
+        mouse_flip_horizontal_wheel: false
+        mouse_flip_vertical_wheel: false
+        mouse_flip_x: false
+        mouse_flip_y: false
+        mouse_swap_wheels: false
+        mouse_swap_xy: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        game_pad_swap_sticks: false
+        identifiers:
+          is_game_pad: false
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 2
+          vendor_id: 39251
+        ignore: false
+        manipulate_caps_lock_led: true
+        mouse_flip_horizontal_wheel: false
+        mouse_flip_vertical_wheel: false
+        mouse_flip_x: false
+        mouse_flip_y: false
+        mouse_swap_wheels: false
+        mouse_swap_xy: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        game_pad_swap_sticks: false
+        identifiers:
+          is_game_pad: false
+          is_keyboard: false
+          is_pointing_device: true
+          product_id: 613
+          vendor_id: 76
+        ignore: true
+        manipulate_caps_lock_led: false
+        mouse_flip_horizontal_wheel: false
+        mouse_flip_vertical_wheel: false
+        mouse_flip_x: false
+        mouse_flip_y: false
+        mouse_swap_wheels: false
+        mouse_swap_xy: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        game_pad_swap_sticks: false
+        identifiers:
+          is_game_pad: false
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 6200
+          vendor_id: 4152
+        ignore: false
+        manipulate_caps_lock_led: true
+        mouse_flip_horizontal_wheel: false
+        mouse_flip_vertical_wheel: false
+        mouse_flip_x: false
+        mouse_flip_y: false
+        mouse_swap_wheels: false
+        mouse_swap_xy: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        game_pad_swap_sticks: false
+        identifiers:
+          is_game_pad: false
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 13392
+          vendor_id: 62267
+        ignore: false
+        manipulate_caps_lock_led: true
+        mouse_flip_horizontal_wheel: false
+        mouse_flip_vertical_wheel: false
+        mouse_flip_x: false
+        mouse_flip_y: false
+        mouse_swap_wheels: false
+        mouse_swap_xy: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        game_pad_swap_sticks: false
+        identifiers:
+          is_game_pad: false
+          is_keyboard: false
+          is_pointing_device: true
+          product_id: 6200
+          vendor_id: 4152
         ignore: true
         manipulate_caps_lock_led: false
         mouse_flip_horizontal_wheel: false
