karabiner: remove app launchers

--- a/config/karabiner/karabiner.yaml
+++ b/config/karabiner/karabiner.yaml
@@ -1,3 +1,4 @@
+# cp ~/.config/karabiner/karabiner.json ./karabiner.json
 # yq karabiner.json --output-format yaml > karabiner.yaml
 #
 # yq karabiner.yaml --output-format json --indent 4 > karabiner.json
@@ -36,7 +37,7 @@ profiles:
         - description: lock
           manipulators:
             - from:
-                key_code: delete_forward
+                key_code: escape
                 modifiers:
                   mandatory:
                     - command
@@ -62,30 +63,6 @@ profiles:
                 - key_code: comma
                   modifiers:
                     - command
-              type: basic
-        - description: browser
-          manipulators:
-            - from:
-                key_code: v
-                modifiers:
-                  mandatory:
-                    - command
-                    - control
-                    - option
-              to:
-                - shell_command: open -n "/Applications/Brave Browser.app"
-              type: basic
-        - description: term
-          manipulators:
-            - from:
-                key_code: c
-                modifiers:
-                  mandatory:
-                    - command
-                    - control
-                    - option
-              to:
-                - shell_command: /opt/homebrew/bin/alacritty msg create-window || open /Applications/Alacritty.app
               type: basic
     simple_modifications:
       - from:
