--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -7,5 +7,9 @@
       "${3rd}/luv/library",
       "$XDG_DATA_HOME/nvim/site/pack/packer/start"
     ]
+  },
+  "diagnostics": {
+    "ignoredFiles": "Disable",
+    "libraryFiles": "Disable"
   }
 }
