--- a/config/vimium/vimium-options.yaml
+++ b/config/vimium/vimium-options.yaml
@@ -49,4 +49,6 @@ searchUrl: https://duckduckgo.com/?q=%s
 settingsVersion: 2.0.6
 userDefinedLinkHintCss: |-2
 STYLESHEET
-exclusionRules: []
+exclusionRules:
+  - passKeys: ""
+    pattern: https?://mail.google.com/*
