Revert "alacritty: experiment with ClearHistory"
This reverts commit c8150492659d9ad289c8173a777893d5f7c0b2c2.

--- a/config/alacritty/bindings.toml
+++ b/config/alacritty/bindings.toml
@@ -89,25 +89,13 @@ mods = "Control|Shift"
 key = "L"
 mode = "~AppCursor|~AppKeypad|~Alt"
 mods = "Control|Shift"
-chars = "\u000c"
-
-[[keyboard.bindings]]
-key = "L"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control|Shift"
-action = "ClearHistory"
+command.program = "alacritty-clear"
 
 [[keyboard.bindings]]
 key = "Return"
 mode = "~AppCursor|~AppKeypad|~Alt"
 mods = "Control|Shift"
-chars = "\u000c"
-
-[[keyboard.bindings]]
-key = "Return"
-mode = "~AppCursor|~AppKeypad|~Alt"
-mods = "Control|Shift"
-action = "ClearHistory"
+command.program = "alacritty-clear"
 
 [[keyboard.bindings]]
 action = "First"
