vim: luals: basic vim settings, .luarc.json can override

--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -10,6 +10,7 @@
   },
   "diagnostics": {
     "libraryFiles": "Disable",
+    "globals": [],
     "severity": {
       "deprecated": "Warning"
     },
