tmux: top title

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,8 @@ set -g status-style fg="bright${HL_NAME}",bg=color19
 # just the title, the rest is truncated noise
 set -g status-format "#{pane_title}"
 
+set -g status-position top
+
 # moar scollback
 set -g history-limit 100000
 
