--- a/config/waybar/config
+++ b/config/waybar/config
@@ -27,7 +27,7 @@
   "river/window": {
     "format": " {} ",
     "max-length": 999, // will push center/right unless capped, needs some value to truncate
-    "on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')",
+    "on-click": "wl-copy -p $(lswt -j | jq -r '.toplevels | map(select(.activated)) | first | .title')",
     "tooltip": false
   },
   "custom/slstatus": {
