colours: 16 colour capable tmux, pass the TERM through ssh

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,10 @@ set -g set-titles on
 set -g set-titles-string "#{pane_title}"
 
 # host/root colour, 19 is selection background
-set -g status-style fg="bright${HL_NAME}",bg=color19
+set -g status-style bg="${HL_NAME}",fg=black
+if-shell -b '[ "${COLORTERM}" = "truecolor" ]' {
+	set -g status-style fg="bright${HL_NAME}",bg=color19
+}
 
 # just the title, the rest is truncated noise
 set -g status-format "#{pane_title}"
