alacritty: cs-[nj] new term(linux) window(macos)

--- a/config/alacritty/bindings.toml
+++ b/config/alacritty/bindings.toml
@@ -1,6 +1,11 @@
 [[keyboard.bindings]]
 key = "J"
-mods = "Super|Shift"
+mods = "Control|Shift"
+command.program = "term"
+
+[[keyboard.bindings]]
+key = "N"
+mods = "Control|Shift"
 command.program = "term"
 
 [[keyboard.bindings]]
