--- a/config/alacritty/appearance-vt102.toml
+++ b/config/alacritty/appearance-vt102.toml
@@ -1,49 +1,53 @@
+# 80x24 on duke at scale 2, fullscreen
 [font]
-size = 18
+size = 18 
 normal = { family = "vt52", style = "Medium" }
+
+[window]
+dynamic_padding = true
 
 [cursor]
 style = { blinking = "Always", shape = "Block" }
 vi_mode_style = "Block"
 
 [colors.selection]
-background = "0x73cef4"
+background = "0xbcf8ff"
 text =       "0x000000"
 
 [colors.footer_bar]
-background = "0x73cef4"
+background = "0xbcf8ff"
 foreground = "0x000000"
 
 [colors.search.matches]
-background = "0x73cef4"
+background = "0xbcf8ff"
 foreground = "0x000000"
 
 [colors.search.focused_match]
-background = "0x73cef4"
+background = "0xbcf8ff"
 foreground = "0x000000"
 
 [colors.primary]
 background =     "0x000000"
-dim_foreground = "0x73cef4"
-foreground =     "0x73cef4"
+dim_foreground = "0xbcf8ff"
+foreground =     "0xbcf8ff"
 
 [colors.normal]
 black =   "0x000000"
-blue =    "0x73cef4"
-cyan =    "0x73cef4"
-green =   "0x73cef4"
-magenta = "0x73cef4"
-red =     "0x73cef4"
-white =   "0x73cef4"
-yellow =  "0x73cef4"
+blue =    "0xbcf8ff"
+cyan =    "0xbcf8ff"
+green =   "0xbcf8ff"
+magenta = "0xbcf8ff"
+red =     "0xbcf8ff"
+white =   "0xbcf8ff"
+yellow =  "0xbcf8ff"
 
 [colors.bright]
 black =   "0x000000"
-blue =    "0x73cef4"
-cyan =    "0x73cef4"
-green =   "0x73cef4"
-magenta = "0x73cef4"
-red =     "0x73cef4"
-white =   "0x73cef4"
-yellow =  "0x73cef4"
+blue =    "0xbcf8ff"
+cyan =    "0xbcf8ff"
+green =   "0xbcf8ff"
+magenta = "0xbcf8ff"
+red =     "0xbcf8ff"
+white =   "0xbcf8ff"
+yellow =  "0xbcf8ff"
 
